Attach API test on a core file